--- a/style.css
+++ b/style.css
@@ -131,6 +131,6 @@
 		background: #fff;
 		padding: .2em 15px .2em .75em;
 		font-size: .75em;
-		text-transform: uppercase;	
+		text-transform: none;	
 	}
 }
